# Kaleidoscope

./: .gitignore  2  Cargo.toml  LICENSE  Makefile  TODO.md
benches/: kaleidoscope_bench.rs
examples/: example.lmda  main.lmda
frontend/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: elements.ts  handler.ts  main.ts  utils.ts
frontend/src/renderers/: manim.ts  renderHandler.ts  svg.ts
frontend/src/renderers/manim/: manimRenderer.ts
frontend/src/renderers/svg/: node.ts  svg.ts
frontend/src/utils/: svgTree.ts  utils.ts
frontend/styles/: _variables.scss  main.scss
src/: args.rs  assignments.rs  interperter.rs  interpreter.rs  invocations.rs  lib.rs  main.rs  module.rs  opts.rs  parsing.rs  stdlib.rs  utils.rs
src/args/: mod.rs
src/invocations/: include.rs  mod.rs
src/nodes/: abstraction.rs  application.rs  mod.rs  node.rs  variable.rs
src/repl/: mod.rs
src/types/: abstraction.rs  application.rs  mod.rs  node.rs  variable.rs
