[package]
name = "kaleidoscope"
version = "0.1.0"
edition = "2024"
description = "A Lambda calculus parser and interperter."
license = "MIT"
repository = "https://github.com/BenCassidy33/Kaleidoscope"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
console = "0.16.4"
derive_more = { version = "2.1.1", features = ["full"] }
enum-iterator = "2.3.0"
getset = "0.1.7"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
wasm-bindgen = "0.2.126"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kaleidoscope"
path = "src/bin/main.rs"
bench = false

[[bench]]
name = "kaleidoscope_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
debug = false
strip = true
debug-assertions = false
overflow-checks = false

# this might need to be removed for error reporting
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
